// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Members/> Should render Members 1`] = `
<DocumentFragment>
  <div
    class="af-main container"
  >
    <h1
      class="af-title--content"
    >
      Liste des membres
    </h1>
    <div
      style="min-height: 94px; position: relative;"
    >
      <div
        class="af-paging"
      >
        <div
          class="af-paging__limit"
        >
          <div
            class="af-paging__limit"
          >
            <form
              class="af-paging__form"
            >
              <div
                class="af-form__group"
              >
                <div
                  class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
                >
                  <label
                    class="af-form__group-label"
                    for="paging"
                  >
                    Afficher
                  </label>
                </div>
                <div
                  class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
                >
                  <div
                    class="af-form__select"
                  >
                    <div
                      class="af-form__select-container"
                    >
                      <select
                        class="af-form__input-select"
                        id="paging"
                      >
                        <option
                          value="5"
                        >
                          5
                        </option>
                        <option
                          value="10"
                        >
                          10
                        </option>
                        <option
                          value="25"
                        >
                          25
                        </option>
                        <option
                          value="50"
                        >
                          50
                        </option>
                        <option
                          value="100"
                        >
                          100
                        </option>
                      </select>
                      <span
                        class="glyphicon glyphicon-menu-down"
                      />
                    </div>
                    <span
                      class="af-form__input-cmplt"
                    >
                      éléments
                    </span>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="af-paging__pager"
        >
          <nav
            class="af-pager"
          >
            <ul
              class="af-pager__pagination"
            >
              <li
                class="af-pager__item af-pager__item--disabled"
              >
                <span
                  class="af-pager__item-nolink"
                >
                  « Précédent
                </span>
              </li>
              <li
                class="af-pager__item af-pager__item--active"
              >
                <a
                  class="af-pager__item-link"
                  href="#"
                >
                  <span>
                    1
                  </span>
                </a>
              </li>
              <li
                class="af-pager__item af-pager__item--disabled"
              >
                <span
                  class="af-pager__item-nolink"
                >
                  Suivant »
                </span>
              </li>
            </ul>
          </nav>
        </div>
      </div>
       
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Members/> with <Notification /> Should render Members with <Notification /> when have notifications 1`] = `
<DocumentFragment>
  <aside
    class="af-notifications af-notifications--open"
  >
    <div
      class="af-alert af-alert--notification af-alert--error"
    >
      <button
        class="af-alert__icon-close"
      >
        <i
          class="glyphicon glyphicon-close"
        />
      </button>
      <div
        class="af-alert__title"
      >
        <div
          class="af-alert__title-icon"
        >
          <i
            class="glyphicon glyphicon-minus-sign"
          />
        </div>
        <div
          class="af-alert__title-text"
        >
          title
        </div>
      </div>
    </div>
  </aside>
  <div
    class="af-main container"
  >
    <h1
      class="af-title--content"
    >
      Liste des membres
    </h1>
    <div
      style="min-height: 94px; position: relative;"
    >
      <div
        class="af-paging"
      >
        <div
          class="af-paging__limit"
        >
          <div
            class="af-paging__limit"
          >
            <form
              class="af-paging__form"
            >
              <div
                class="af-form__group"
              >
                <div
                  class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
                >
                  <label
                    class="af-form__group-label"
                    for="paging"
                  >
                    Afficher
                  </label>
                </div>
                <div
                  class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
                >
                  <div
                    class="af-form__select"
                  >
                    <div
                      class="af-form__select-container"
                    >
                      <select
                        class="af-form__input-select"
                        id="paging"
                      >
                        <option
                          value="5"
                        >
                          5
                        </option>
                        <option
                          value="10"
                        >
                          10
                        </option>
                        <option
                          value="25"
                        >
                          25
                        </option>
                        <option
                          value="50"
                        >
                          50
                        </option>
                        <option
                          value="100"
                        >
                          100
                        </option>
                      </select>
                      <span
                        class="glyphicon glyphicon-menu-down"
                      />
                    </div>
                    <span
                      class="af-form__input-cmplt"
                    >
                      éléments
                    </span>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="af-paging__pager"
        >
          <nav
            class="af-pager"
          >
            <ul
              class="af-pager__pagination"
            >
              <li
                class="af-pager__item af-pager__item--disabled"
              >
                <span
                  class="af-pager__item-nolink"
                >
                  « Précédent
                </span>
              </li>
              <li
                class="af-pager__item af-pager__item--active"
              >
                <a
                  class="af-pager__item-link"
                  href="#"
                >
                  <span>
                    1
                  </span>
                </a>
              </li>
              <li
                class="af-pager__item af-pager__item--disabled"
              >
                <span
                  class="af-pager__item-nolink"
                >
                  Suivant »
                </span>
              </li>
            </ul>
          </nav>
        </div>
      </div>
       
    </div>
  </div>
</DocumentFragment>
`;
